--- a/exercise-1/index.html
+++ b/exercise-1/index.html
@@ -5,11 +5,20 @@
     <title>练习-1：css selector</title>
     <style>
        /* you can test your css at here */
+       /*.section,.title {
+       		color: red;
+       }*/
     </style>
 </head>
 <body>
     <div class="section">
         <h1 id="title" class="title">title</h1>
+    	<!-- section -->
+        <!-- <h1 id="title2" class="title">title2</h1> -->
     </div>
+
+    <!-- <div class="title">
+        <h1 id="title" class="title">title</h1>
+    </div> -->
 </body>
 </html>
